--- a/index.html.haml
+++ b/index.html.haml
@@ -2,6 +2,12 @@
 %html
   %head
     %title Cards with Points
+    %script(src="vendor/underscore.js")
+    %script(src="vendor/jquery-1.8.3.js")
+    %script(src="vendor/backbone.js")
+
+
+    %script(src="/app.js")
   %body
     %h1 Cards w. Points
 
