A meaningful intégration test for NewCardView

--- a/index.html.haml
+++ b/index.html.haml
@@ -11,7 +11,7 @@
   %body
     %h1 Cards w. Points
 
-  %section.new-card
+  %section#new-card
     %textarea(placeholder="Make a new card here")
     %button add card
 
