rearrange specs a bit

--- a/index.html.haml
+++ b/index.html.haml
@@ -7,6 +7,7 @@
     %script(src="vendor/backbone.js")
 
 
+    %script(src="/boot.js")
     %script(src="/app.js")
   %body
     %h1 Cards w. Points
