--- a/index.html.haml
+++ b/index.html.haml
@@ -12,6 +12,9 @@
   %body
     %h1 Cards w. Points
 
+    %div#card-wall
+      %div.title
+
   %section#new-card
     %textarea(placeholder="Make a new card here")
     %button add card
