--- a/index.html.haml
+++ b/index.html.haml
@@ -2,13 +2,16 @@
 %html
   %head
     %title Cards with Points
+
+    %link(rel="stylesheet" href="css/app.css" type="text/css")
+    %link(href="http://fonts.googleapis.com/css?family=Reenie+Beanie:regular" rel="stylesheet" type="text/css")
     %script(src="vendor/underscore.js")
     %script(src="vendor/jquery-1.8.3.js")
     %script(src="vendor/backbone.js")
 
-
     %script(src="/boot.js")
     %script(src="/app.js")
+
   %body
     %h1 Cards w. Points
 
