--- a/index.html.haml
+++ b/index.html.haml
@@ -20,12 +20,12 @@
         100
 
   %body
-    %h1 Cards w. Points
+    %h1 Cards<br/> w. points
 
     %div#card-wall
       %div.title
 
   %section#new-card
     %textarea(placeholder="Make a new card here")
-    %button add card
+    %button.add +
 
