--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -1,17 +1,49 @@
+$background-color: #eee;
+$dark-gray: lighten(black,30%);
+$yellow: #ffc;  
+
+$font-cursive:"Shadows Into Light Two",arial,sans-serif;  
+
+$card-margin: 20px;
+$card-padding: 16px;
+$card-width: 200px;
+$card-height: 124px;
+
 body {
   background: #eee;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  font-size: 45pt;
+	line-height: 0.8;
+letter-spacing: -3;
+	text-align: right;
+	padding: 0;
+	margin: 0;
+	right: 0.5em;
+	color: $dark-gray;
+	position: fixed;
+	z-index: -1;
+}
+
+#card-wall .title {
+	font-size: 20pt;
+	margin-top: $card-margin;
+	margin-left: $card-margin;
 }
 
 .card {
   text-decoration:none;  
   color:#000;  
-  background:#ffc;  
+  background:$yellow;
   display:inline-block;  
-  width:8em;  
-  padding: .6em .6em;  
-  margin: 1em;
+  width:$card-width;
+	height:$card-height;
+  padding: $card-padding;
+  margin: $card-margin;
 
-  font-family:"Shadows Into Light Two",arial,sans-serif;  
+  font-family:$font-cursive;
   font-size:140%;  
 
   -moz-box-shadow:5px 5px 20px rgba(33,33,33,1);  
@@ -26,3 +58,43 @@ body {
     text-align: right;
   }
 }  
+
+#new-card {
+	position: relative;
+  width:$card-width*1.1;
+	height:$card-height*1.1;
+	display: inline-block;
+
+  margin: $card-margin;
+	padding: $card-padding;
+
+	-webkit-transform: rotate(-3deg);
+	-o-transform: rotate(-3deg);
+	transform: rotate(-3deg);
+
+	background: lighten($yellow,5%);
+					box-shadow: 14px 14px 60px rgba(33,33,33,0.8);  
+  -webkit-box-shadow: 14px 14px 60px rgba(33,33,33,0.8);  
+	   -moz-box-shadow: 14px 14px 60px rgba(33,33,33,0.8);  
+	
+	textarea {
+		font-family:$font-cursive;
+	  width: 100%;
+	  height: 100%;
+		border: none;
+		font-size: 16pt;
+		background: none;
+		outline: none;
+		resize: none;
+	}
+
+	button {
+	  font-size: 35pt;
+		border: none;
+		cursor: pointer;
+		background: none;
+		position: absolute;
+		right: 8px;
+		bottom: 8px;
+	}
+}
