--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -1,6 +1,6 @@
 $background-color: #eee;
 $dark-gray: lighten(black,30%);
-$yellow: #ffc;  
+$yellow: transparentize(#ffc,0.1);
 
 $font-cursive:"Shadows Into Light Two",arial,sans-serif;  
 
