add github fork-me ribbon

--- a/index.html.haml
+++ b/index.html.haml
@@ -20,6 +20,8 @@
         100
 
   %body
+    %a(id="fork-me" href="https://github.com/moredip/cards-with-points")
+      %img(src="/fork_me2.png")
     %h1 Cards<br/> w. points
 
     %div#card-wall
